Unify CORS policy for fleet domain and remove duplicate WebConfig